# business-central-rs

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yaml
business_central/: Cargo.toml  all.html  enum.UrlKeyValue.html  fn.build_resource_url.html  index.html  sidebar-items.js  struct.BusinessCentralServices.html  struct.Client.html
business_central/resources/: index.html  sidebar-items.js
business_central/resources/sales_orders/: index.html  sidebar-items.js
business_central/resources/sales_orders/handlers/: fn.get_generic.html  fn.get_order.html  index.html  sidebar-items.js
business_central/resources/sales_orders/models/: index.html  sidebar-items.js  struct.SalesOrder.html
business_central/src/: lib.rs
business_central_cli/: Cargo.toml
business_central_cli/src/: main.rs
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/: lib.rs
src/business_central/: lib.rs.html
src/business_central/resources/: mod.rs.html
src/business_central/resources/sales_orders/: handlers.rs.html  mod.rs.html  models.rs.html
src/resources/: mod.rs
src/resources/sales_orders/: handlers.rs  models.rs
