[package]
name = "business_central"
description = "A short description of my package"
version = "0.1.0"
authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/darbiadev/business-central-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
