[package]
name = "business_central_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
business_central = { path = "../business_central" }
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "4.0.0"
